@@ -1,6 +1,6 @@
 {
   "name": "brave-new-oarc",
-  "version": "4.2.51",
+  "version": "4.2.54",
   "factorio_version": "1.1",
   "title": "Brave New OARC Scenario",
   "author": "JustGoFly + Oarcinae + canidae",
@@ -28,7 +28,6 @@
     "? pvp_td",
     "! LootChestPlus",
     "! Braver_New_World",
-    "! brave-new-world",
-    "! Kux-SmartLinkedChests"
+    "! brave-new-world"
   ]
 }
