@@ -19,8 +19,12 @@ function OarcAutoDeconOnTick()
                                                                     type = "resource", limit = 1} == 0) then
                         miner.order_deconstruction(miner.force)
                         rendering.draw_rectangle{color={1,0.1,0.1,1}, left_top=miner.selection_box.left_top, right_bottom=miner.selection_box.right_bottom, surface="oarc", time_to_live=60*40, miner.last_user.force, draw_on_ground=false}
-                        game.players[miner.last_user.index].print("Removing miner: " .. miner.gps_tag)
-                        log("Removing miner from " .. miner.last_user.name .. miner.gps_tag)
+                        if (global.ocfg.enable_miner_decon_notification[miner.force.name]) then
+                            game.players[miner.last_user.index].print("Removing miner: " .. miner.gps_tag)
+                        end
+                        if (global.enable_oe_debug) then
+                            log("Removing miner from " .. miner.last_user.name .. miner.gps_tag)
+                        end
                     end
                 else
                     log("no miner.last_user on auto decon of miner")
