@@ -30,7 +30,7 @@ warn-biter-attack-option=Warn of biters attacking
 offline-biter-attack-protect=Protect base from biters attacks while offline
 bno-share-chart=Make your map visible for all to see
 decon-empty-miners=Deconstruct miners that have no resources to mine
-
+decon-empty-miners-notification=Notify with msg every time a miner is removed
 
 oarc-starting-area-vanilla=You are spawned in your own starting area (vanilla style).
 oarc-vanilla-spawns-available=There are __1__ vanilla spawns available.
