@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.2.54
-    - if you include "Scrap Resource" mod - you can choose between entities or ore. 
+    - If you include "Scrap Resource" mod - you can choose between entities or ore. 
       I rebalanced the amounts since I used a 10X multiplier, which is now 1X, but then increased
       the size and quantity of the main scrap patch.
+    - Increased the size of the Scrap Resource ore in main base, this patch qty has been modified.
+    - Added a GUI option to mute the messages on every miner deconstruction
 ---------------------------------------------------------------------------------------------------
 Version: 4.2.53
     - Added host option for choice to enable/disable moat, and if moat bridge/no bridge
